# Bedrock-Strands-Agentic-App

./: README.md  diagram_generator.py  main.py  map_assess_summary.py  migration_advisor.py  pyproject.toml
